feat: add esewa

--- a/esewa_flutter_sdk/pubspec.yaml
+++ b/esewa_flutter_sdk/pubspec.yaml
@@ -1,13 +1,12 @@
 name: esewa_flutter_sdk
 description: This is an official Flutter plugin from eSewa to easily integrate eSewa payment into you flutter applications.
 version: 2.4.0+17
-author: eSewa Development
 homepage: https://esewa.com.np/#/home
 documentation: https://developer.esewa.com.np/#/flutter
 
 environment:
-  sdk: '>=3.0.6 <4.0.0'
-  flutter: '>=3.10.6'
+  sdk: ">=3.0.6 <4.0.0"
+  flutter: ">=3.10.6"
 
 dependencies:
   flutter:
